--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -52,6 +52,12 @@ server {
 	#	Bu, temel olarak web sitesi dosyalarının kök dizinini tanımlar ve kullanıcıların web sitesinin içeriğine erişebileceği yerdir.
 	# İstemci, web sitelerine erişen ve sunucudan içerik talep eden kişisel bilgisayarlar, telefonlar vd. cihazlar olabilir.
 	root /var/www/html;
+			#	Eğer WordPress ve PHP-FPM kullanıyorsanız, 'root' direktifindeki 'html' yerine 'php' kullanmanız gerekecektir.
+			#		Çünkü PHP-FPM ile çalışan PHP betikleri için kök dizini, PHP dosyalarının bulunduğu klasördür.
+			#		Varsayılan olarak, WordPress PHP dosyalarının 'php' klasöründe çalıştırır.
+			#	Nginx, konfigürasyon dosyanızda, 'root /var/www/php;' şeklinde bir yapı kullanmamız gerekir.
+			#	Bu sayede, PHP-FPM ile çalışan PHP dosyalarının doğru kök dizinini belirtmiş olursunuz ve WordPress ile ilgili PHP betikleri düzgün bir şekilde işlenir ve sunulur.
+			#root /var/www/php;
 
 	# 'index index.html' ifadesi, Nginx sunucusunun kök dizininde(root) bir istemci(web tarayıcısı) web sitesine istek yaptığında hangi dosyayı varsayılan olarak göstereceğini belirtir.
 	# 'index.html', varsayılan olarak gösterilecek olan dosya adını belirtir.
@@ -60,7 +66,13 @@ server {
 	# Bu yapılandırma, özellikle basit statik web sitelerinde yaygın olarak kullanılır.
 	# Eğer farklı bir varsayılan dosya adı kullanmak istenirse, 'index' direktifine farklı dosya adı eklenerek belirtilir.
 	#	Örneğin, 'index index.php index.html;' şeklinde belirtilirse, Nginx önce 'index.php' dosyasını arayacak, eğer bulamazsa 'index.html' dosyasını gösterecektir.	
-	index index.html;
+	#index index.html;
+	#	Ancak biz WordPress ve PHP-FPM kullanacağımızdan dolayı '.php' uzantılı dosyaları kullanmamız gerekecektir.
+	#		WordPress, PHP tabanlı bir içerik yönetim sistemidir ve PHP betiklerini kullanarak içeriği oluşturur ve işler.
+	#		Bu nedenle, WordPress'in düzgün çalışması için '.php' dosyalarının kullanılması gerekmektedir.
+	#	WordPress teması ve eklentileri '.php' uzantılı dosyalar içerir  ve bu dosyaların Nginx tarafından doğru şekilde işlenmesi ve sunulması için 'index index.php;' şeklinde bir yapı kullanmanız gerekecektir.
+	#index index.php;
+	index index.php index.htm index.html;
 
 	# 'location /' bloğu, Nginx sunucusuna gelen tüm istemcilerin isteklerini ele alır.
 	#	İstemciden gelen HTTP isteklerini yönlendirmek ve belirli işlemler yapmak için kullanılır.	
@@ -69,9 +81,79 @@ server {
 	#	URI, Uniform Resource Identifier'dir (Eşgüdümlü kaynak tanımlayıcısı).
 	#		URI, bir kaynağa erişmek için kullanılan bir adrestir.
 	location / {
-	#		'uri' değişkeni, istemde bulunan dosyanın URI'sini temsil eder.
-	#			Örneğin, 'http://localhost/index.html' isteminde, uri değişkeninin değeri 'index.html' olacaktır.
+	# 'uri' değişkeni, istemde bulunan dosyanın URI'sini temsil eder.
+	#	Örneğin, 'http://localhost/index.html' isteminde, uri değişkeninin değeri 'index.html' olacaktır.
+	# 'try_files' direktifi, bu blok içinde belirtilen dosya veya dizinlerin varlığını kontrol eder ve uygun bir yanıt döndürür.
+	#	'$uri' ifadesiyle istemciden gelen URI, mevcut bir dosya veya dizin olup olmadığını kontrol eder.
+	#	Eğer dosya veya dizin varsa, o içeriği istemciye gönderir.
+	#	Ancak, istemciden gelen URI mevcut bir dosya veya dizin değilse, '$uri/' ifadesiyle bir dizin olarak kontrol eder.
+	#	Eğer dizin varsa ve o dizinde 'index' direkfitiyle belirtilen bir dosya varsa, o dosyanın içeriğini gönderir.
+	#	Eğer dizin varsa ancak belirtilen bir 'index' dosyası yoksa, Nginx bu sefer dizindeki dosyaların listesini istemciye gönderir.
+	#	Eğer hem dosya hem de dizin yoksa, '=404' ifadesi, '404 Not Found HTTP' hatası döndürerek istemciye dosyanın bulunamadığını belirtir.
+	#	Bu şekilde, istemci tarafından yapılan isteklerin durumuna göre uygun yanıtlar döndüren bir yapı sağlanmış olur.
+
 		try_files $uri $uri/ =404;
+		#	Hata sayfasına yönlendirme olmadan özel bir yönlendirme istenirse bu şekilde yapılır.
+		#try_files $uri $uri/ /index.html?$args;
+	}
+
+	# 'location ~ \.php$' ifadesi, nginx'in bir isteği işlerken URL'inde ".php" uzantısı olan dosyalara yönelik bir eşleştirme yapmasını sağlar.
+	#	Bu blok, ".php" uzantılı dosyaların nginx tarafından PHP-FPM (FastCGI Process Manager) veya başka bir PHP yürütücüsüne yönlendirilmesini belirler.
+	# 'location': Bu, nginx konfigürasyonunda belirli URL kalıplarına göre yapılandırmalar yapmak için kullanılan bloklardan biridir.
+	# '~': Bu, ifadenin bir düzenli ifade(regular expression) olduğunu belirtir.
+	#	Yani, '.php' ifadesinin düzenli ifade olarak işlenmesini sağlar.
+	# '\.php$': Bu düzenli ifade, URL'in sonunda ".php" uzantısını arar.
+	# '$' karakteri URL'nin sonuna geldiğini belirtir.
+	# Bu blok, '.php' uzantılı dosyalara gelen istekleri yakalar ve ilgili PHP yürütücüsüne yönlendirir.
+	#	Örneğin, eğer PHP-FPM kullanıyorsanız, bu blok PHP-FPM'e bu dosyayı işlemesi için gönderir ve sonuç olarak PHP kodu çalıştırılır ve sonucu kullanıcıya gönderilir.
+	location ~ \.php$ {
+
+		# 'fastcgi_split_path_info' ifadesi, PHP dosyalarının yol bilgisini ayrıştırmak için kullanılır.
+		#	Bu ifade, 'fastcgi_param' ile birlikte çalışarak, URL içindeki dosya adını ve ek yol bilgisini ayırır ve PHP-FPM'ye doğru şekilde iletilmesini sağlar.
+		#	Ayrıştırılan değerler FastCGI parametrelerine atanmaktadır.
+		#	Detaylar:
+		#		'fastcgi_split_path_info': PHP dosyalarının yol bilgisini ayrıştırmak için kullanılır.
+		#		'^': Metnin başlangıcında eşleşmesini belirtir.
+		#			Örneğin, "abcdef" metni '^abc' deseniyle eşleşir, '^dde' deseniyle eşleşmez.
+		#		'(.+\.php)': URL'de ".php" uzantısı içeren dosya adını yakalar ve parantez içine alır.
+		#			'.+' ifadesi, en az bir veya daha fazla karakteri temsil eder, '\.' karakteri noktayı temsil eder ve 'php' kelimesi tam olarak "php" ile eşleşir. 
+		#		'(/.+)': URL'de başka bir yol bilgisi parçasını yakalr ve parantez içine alır.
+		#			'/.+' ifadesi, bir eğik çizgi ile başlayan ve an az bir veya daha fazla karakter içeren herhangi bir yol bilgisini temsil eder.	
+		#	Bu ifade, bir URL'de ".php" uzantılı bir dosya adı ve ek bir yol bilgisi varsa, bu iki parçayı ayrıştırır ve PHP-FPM'ye doğru şekilde iletilmesini sağlar.
+		#		Örneğin, eğer URL "/example.php/foo/bar" ise, bu ifade dosya adını "example.php" ve yol bilgisini "/foo/bar" olarak ayrıştırır ve PHP-FPM'ye "/example.php" dosyasını ve "/foo/bar" yol bilgisini işlemesi için iletilmesini sağlar.
+		#		Bu şekilde, PHP kodu doğru şekilde çalıştırılır ve sonuç kullanıcıya gönderilir.
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		# 'fastcgi_pass' direktifi, PHP-FPM hizmetine yönlendirmeyi sağlayan bir nginx direktifidir.
+		#	PHP dosyalarını çalıştırmak ve sonuçları nginx'e geri göndermek için kullanılan bir PHP FastCGI yöneticisidir.
+		#	'fastcgi_pass' ile belirtilen değer, PHP-FPM hizmetinin adresini ve port numarasını belirtir.
+		#		'fastcgi_pass wordpress:9000;' ifadesinde 'wordpress' ifadesi, docker-compose.yml dosyasında belirtilen PHP-FPM hizmetinin adını temsil eder ve '9000' ise PHP-FPM hizmetinin dinlemesi gereken port numarasını gösterir.
+		fastcgi_pass wordpress:9000;
+		# 'fastcgi_index' direktifi, nginx'in PHP dosyalarını çalıştırırken hangi dosyanın varsayılan olarak çalıştırılacağını belirlemek için kullanılır.
+		#	Yani, eğer bir URL'de belirtilen dosya adı yoksa, 'fastcgi_index' ile belirtilen dosya adı kullanılır.
+		# Özellikle PHP ile çalışırken, genellikle 'index.php' dosyası ana dosyasıdır.
+		#	Bu nedenle, 'fastcgi_index index.php;' ifadesi, eğer bir URL'de belirtilen dosya adı yoksa ve dizinde 'index.php' dosyası varsa, nginx'in 'index.php' dosyasını varsayılan olarak çalıştırmasını sağlar.
+		#	Örneğin, 'htpp://example.com' URL'sine yapılan bir istek, nginx tarafından 'http://example.com/index.php' olarak işlenecektir, çünkü 'index.php' varsayılan dosya adı olarak belirtilmiştir.
+		#	Bu, PHP dosyalarını çalıştıran uygulamalarda yaygın olarak kullanılan bir yöntemdir ve 'fastcgi_index' direktifi, doğrudan PHP dosyalarına erişimde kullanıcıların URL'lerini basitleştirir.
+		fastcgi_index index.php;
+		# 'include fastcgi_params;' ifadesi, nginx'in PHP-FPM veya diğer FastCGI programıyla iletişim kurarken kullanılan FastCGI parametrelerini içeren bir dosyanın dahil edilmesini sağlar. 
+		# 'fastcgi_params' dosyası, nginx tarafından varsayılan olarak sağlanan FastCGI parametrelerini içerir ve bu parametreler, nginx ve FastCGI programları arasındaki isteklerin ve cevapların düzgün şekilde işlenmesini sağlar.
+		#	Bu parametreler, PHP veya başka bir FastCGI programını çalıştıran uygulamalarda önemlidir, çünkü doğru bilgilerin iletilmesini ve işlenmesini sağlar.
+		# 'include fastcgi_params;' ifadesini kullanmak, FastCGI parametrelerini tekrar tekrar belirtmek yerine, bu parametreleri tek bir yerde yönetmeyi ve birden fazla yerde kullanmayı kolaylaştırır.
+		#	Ayrıca, bu yöntem, güncelleştirmeler veya değişiklikler yapıldığında tek bir dosyayı güncelleştirmekle yetinmenizi sağlar, böylece ayarlarınızın tutarlı ve güncel kalmasını sağlar.
+		# 'fastcgi_params' dosyası, genellikle Nginx'i yüklerken veya yapılandırırken, Nginx paketiyle birlikte varsayılan 'fastcgi_params' dosyası otomatik olarak oluşturulur ve  '/etc/nginx/fastcgi_params' gibi bir konumda yer alır.
+		#	Bu dosya, Nginx'in FastCGI uygulamaları (örneğin PHP-FPM) ile etkileşim kurarken gereken temel parametreleri tanımlar.
+		include fastcgi_params;
+		# 'fastcgi_param', Nginx'in PHP-FPM gibi FastCGI uygulamalarına çeşitli ortam değişkenlerini aktarmasını sağlayan bir Nginx direktifidir.
+		#	Bu değişken, PHP-FPM'ye özel bilgileri aktarmak için kullanılır ve PHP-FPM'nin doğru şekilde çalışmasını ve sonuçları işlemesini sağlar.
+		# 'fastcgi_param' ile belirtilen değişkenler, HTTP isteği veya Nginx'in diğer ayarlarında gelen değerlere dayanabilir.
+		#	Örneğin, genellikle 'SCRIPT_FILENAME', 'SCRIPT_NAME', 'REQUEST_METHOD', 'QUERY_STRING' gibi değişkenler PHP-FPM'ye aktarılarak PHP kodunun doğru şekilde çalışması için gereklidir.
+		#		'SCRIPT_FILENAME':
+		#		'SCRIPT_NAME':
+		#		'REQUEST_METHOD':
+		#		'QUERY_STRING':
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
 }
 
