--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -112,7 +112,6 @@ server {
 		#	Bu ifade, 'fastcgi_param' ile birlikte çalışarak, URL içindeki dosya adını ve ek yol bilgisini ayırır ve PHP-FPM'ye doğru şekilde iletilmesini sağlar.
 		#	Ayrıştırılan değerler FastCGI parametrelerine atanmaktadır.
 		#	Detaylar:
-		#		'fastcgi_split_path_info': PHP dosyalarının yol bilgisini ayrıştırmak için kullanılır.
 		#		'^': Metnin başlangıcında eşleşmesini belirtir.
 		#			Örneğin, "abcdef" metni '^abc' deseniyle eşleşir, '^dde' deseniyle eşleşmez.
 		#		'(.+\.php)': URL'de ".php" uzantısı içeren dosya adını yakalar ve parantez içine alır.
@@ -122,6 +121,11 @@ server {
 		#	Bu ifade, bir URL'de ".php" uzantılı bir dosya adı ve ek bir yol bilgisi varsa, bu iki parçayı ayrıştırır ve PHP-FPM'ye doğru şekilde iletilmesini sağlar.
 		#		Örneğin, eğer URL "/example.php/foo/bar" ise, bu ifade dosya adını "example.php" ve yol bilgisini "/foo/bar" olarak ayrıştırır ve PHP-FPM'ye "/example.php" dosyasını ve "/foo/bar" yol bilgisini işlemesi için iletilmesini sağlar.
 		#		Bu şekilde, PHP kodu doğru şekilde çalıştırılır ve sonuç kullanıcıya gönderilir.
+		# 'FastCGI' nedir:
+		#	FastCGI (Fast Common Gateway Interface), CGI'nin (Common Gateway Interface) daha hızlı ve verimli bir versiyonudur.
+		#	CGI, web sunucusu ile dış kaynaklı programlar arasında iletişim kurmaya olanak tanıyan bir arayüzdür.
+		#	Ancak, CGI'nin performansı düşüktür çünkü her istek için ayrı bir dış program çalıştırılır ve sonlandırılır.
+		#	Bu nedenle, yoğun trafikli web sitelerinde CGI kullanmak verimsiz olabilir.
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		# 'fastcgi_pass' direktifi, PHP-FPM hizmetine yönlendirmeyi sağlayan bir nginx direktifidir.
 		#	PHP dosyalarını çalıştırmak ve sonuçları nginx'e geri göndermek için kullanılan bir PHP FastCGI yöneticisidir.
@@ -147,12 +151,27 @@ server {
 		#	Bu değişken, PHP-FPM'ye özel bilgileri aktarmak için kullanılır ve PHP-FPM'nin doğru şekilde çalışmasını ve sonuçları işlemesini sağlar.
 		# 'fastcgi_param' ile belirtilen değişkenler, HTTP isteği veya Nginx'in diğer ayarlarında gelen değerlere dayanabilir.
 		#	Örneğin, genellikle 'SCRIPT_FILENAME', 'SCRIPT_NAME', 'REQUEST_METHOD', 'QUERY_STRING' gibi değişkenler PHP-FPM'ye aktarılarak PHP kodunun doğru şekilde çalışması için gereklidir.
-		#		'SCRIPT_FILENAME':
-		#		'SCRIPT_NAME':
-		#		'REQUEST_METHOD':
-		#		'QUERY_STRING':
+		# 'fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;' direktifi, PHP-FPM ile iletilen dosya adını belirler.
+		#	'$document_root' değişkeni, PHP dosyasının dizinini temsil eder. ve '$fastcgi_script_name' değişkeni ise PHP dosyasının adını içerir.
+		#	Bu direktif sayesinde, PHP-FPM, doğru dosyayı çalıştırabilir ve PHP kodunu işleyebilir.
+		#	Örnek, Nginx sunucunuzda 'var/www/html' dizini, PHP dosyalarınızın yer aldığı kök dizinidir ve 'example.php' adında bir PHP dosyanız var ve bu dosya '/var/www/html' dizini içindedir.
+		#		O zaman direktif şu şekilde çalışır:
+		#			'$document_root' değişkeni, 'var/www/html' değerini temsil eder(kök dizini).
+		#			'$fastcgi_script_name' değişkeni, talepte bulunan PHP dosyasının adını içerir.
+		#				Örneğin, eğer kullanıcı '/example.php' sayfasını talep ediyorsa, '$fastcgi_script_name' değişkeni '/example.php' değerini alır.
+		#	Sonuç olarak, 'fastcgi_param SCRIPT_FILENAME /var/www/html/example.php;' şeklinde bir değer oluşur.
+		#	Bu değer PHP-FPM tarafından talep edilen dosyanın tam yolu olan '/var/www/html/example.php' dosyasını belirtir.
+		#	Böylece PHP-FPM, 'example.php' dosyasını çalıştırabilir ve PHP kodunu işleyebilir.
+		#	Eğerki bu direktif kullanılmaz ise, PHP-FPM, talep edilen PHP dosyasının tam yolunu bilemeyeceği için PHP dosyasını çalıştıramaz ve işleyemez.
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		# 'fastcgi_param SCRIPT_NAME $fastcgi_script_name;' direktifi, 'SCRIPT_NAME' adlı bir ortam değişkeni tanımlar ve ona '$fastcgi_script_name' değişkeninin değerini atar.
+		#	Burada 'SCRIPT_NAME' ortam değişkenine 'example.php' değerini atar.
 		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		# 'fastcgi_param PATH_INFO $fastcgi_path_info;' direktifi, 'PATH_INFO' adlı bir ortam değişkeni tanımlar ve ona '$fastcgi_path_info' değişkeninin değerini atar.
+		#	Bu değişken ekstra yol bilgisin içerir.
+		#	Örneğin, PHP-FPM tarafından çalıştırılan bir PHP dosyası şu şekilde bir URI ile çağrıldı: 'http://example.com/user/profile.php/info'
+		#		Bu durumda, 'PATH_INFO' değişkeni, '/info' değerini alacaktır.
+		#		Yani, ekstra yol bilgisini içerir ve dosyasının adından sonraki ekstra yolu temsil eder.
 		fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
 }
